Mobile SE : Index creation failed with duplicate key error

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 3.7.2
    • Affects Version/s: None
    • Component/s: Storage
    • None
    • Fully Compatible
    • Storage 2018-01-29
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      The jstest indexbg_updates.js fails with duplicate key error when executed on a mongodb instance started with Mobile storage engine.

      [MongoDFixture:job2] 2018-01-09T01:09:30.890+0000 I COMMAND  [conn62] command
      indexbg_updates.$cmd appName: "MongoDB Shell" command: createIndexes {
      createIndexes: "coll", indexes: [ { key: { field0: 1.0 }, name: "field0_1", background: true } ],
      $db: "indexbg_updates" } exception: E11000 duplicate key error index: index-36-3171480302421944339
      dup key: { : null } code:DuplicateKey numYields:223 reslen:154 locks:{ Global: { acquireCount:
      { r: 224, w: 224 } }, Database: { acquireCount: { w: 224, W: 2 }, acquireWaitCount: { W: 2 },
      timeAcquiringMicros: { W: 7691 } }, Collection: { acquireCount: { W: 224 }, acquireWaitCount: { W: 224 }
      

            Assignee:
            Neha Khatri (Inactive)
            Reporter:
            Neha Khatri (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: