SERVER-32710 Fix duplicate key error in case of non-unique index.

When an index build operation happens in parallel with a document update on the
same field, it is possible to get a key that already exists. Ignore it for
non-unique index.

GitOrigin-RevId: f870f254d941304d6d4a556f6f7543eb6af41068